--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-materialize": "^6.7.2",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.7.5",
+    "jquery": "^3.2.1",
+    "materialize-css": "^0.98.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
