--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.2",
+    "@ngrx/store": "^2.2.1",
+    "@ngrx/store-devtools": "^3.2.4",
     "angular2-materialize": "^6.7.2",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
